--- a/alistirma2.2
+++ b/alistirma2.2
@@ -1,4 +1,4 @@
-#Bu kod, 1'den n'e kadar olan sayıların toplamını bulan fonksiyonu içerir.
+#Bu kod, 1'den n'ye kadar olan sayıların toplamını bulan fonksiyonu içerir.
 def toplam(n):
     if n==0:
         return 0
