--- a/alistirma2.1
+++ b/alistirma2.1
@@ -4,14 +4,27 @@ import random
 sayı=str(random.randint(10,98))
 while sayı[0]==sayı[1]:
     sayı=random.randint(10,98)
-
-while True:
-    tahmin=input("Tahminini gir. Girdiğin sayı 10 ile 98 arasında olmalı ve farklı rakamlardan oluşmalı: ")
-    if len(tahmin)!=2 or tahmin[0]==tahmin[1] or tahmin.isdigit()!=1:
-        print("Hatalı giriş. Lütfen tekrar dene.")
-    elif tahmin[0]!=sayı[0] and tahmin[1]!=sayı[1]:
-        print("doğruyer:0, yanlışyer:-2")
-    elif (tahmin[0]==sayı[0] and tahmin[1]!=sayı[1]) or (tahmin[0]!=sayı[0] and tahmin[1]==sayı[1]):
-        print("doğruyer:1, yanlışyer:-1")
-    elif tahmin[0]==sayı[0] or tahmin[1]==sayı[1]:
-        print("Tebrikler, doğru tahmin!")
+tahmin=0
+while (tahmin!=sayı):
+    tahmin=str(input("Tahminini gir. Girdiğin sayı 10 ile 98 arasında olmalı ve farklı rakamlardan oluşmalı: "))
+    if len(tahmin)==2 and tahmin[0]!=tahmin[1] and tahmin.isdigit()==1:
+        doğruyer=0
+        yanlışyer=0
+        tahmin=str(tahmin)
+        sayı=str(sayı)
+        if tahmin[0]==sayı[0]:
+            doğruyer+=1
+        if tahmin[0]==sayı[1]:
+            yanlışyer-=1
+        if tahmin[1]==sayı[1]:
+            doğruyer+=1
+        if tahmin[1]==sayı[0]:
+            yanlışyer-=1
+        if doğruyer==0 and yanlışyer==0:
+            print("skor=0")
+        if doğruyer==0 and yanlışyer!=0:
+            print("Yanlış yer: ", yanlışyer)
+        if doğruyer!=0 and yanlışyer==0:
+            print("Doğru yer: ", doğruyer)
+        if doğruyer==2:
+            print("Tebrikler. Doğru tahmin!")
